Add header html,css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Microsoft Home Clone</title>
-    <link rel="stylesheet" href="./src/css/style.css">
-</head>
-<body>
-    <h1>Hello world!!!</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Microsoft Home Clone</title>
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+            integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./src/css/style.css" />
+        <!-- sass style.scss src/css/style.css -->
+    </head>
+    <body>
+        <div class="container">
+            <nav class="main-nav">
+                <img src="./src/img/logo.png" alt="Logo" class="logo" />
+
+                <ul class="main-menu">
+                    <li><a href="#">Office</a></li>
+                    <li><a href="#">Windows</a></li>
+                    <li><a href="#">Surface</a></li>
+                    <li><a href="#">Xbox</a></li>
+                    <li><a href="#">Deals</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+
+                <ul class="right-menu">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-search"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <header class="showcase">
+                <h2>Surface Deals</h2>
+                <p>select Surface are on sale now - save while supplies last</p>
+                <a href="#" class="btn">Shop Now <i class="fas fa-chevron-right"></i></a>
+            </header>
+        </div>
+    </body>
 </html>
