--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="./src/css/style.css" />
-        <!-- sass style.scss src/css/style.css -->
+        <!-- sass --watch style.scss src/css/style.css -->
     </head>
     <body>
         <div class="container">
+            <!-- Nav -->
             <nav class="main-nav">
                 <img src="./src/img/logo.png" alt="Logo" class="logo" />
 
@@ -43,11 +44,60 @@
                 </ul>
             </nav>
 
+            <!-- Showcase -->
             <header class="showcase">
                 <h2>Surface Deals</h2>
                 <p>select Surface are on sale now - save while supplies last</p>
                 <a href="#" class="btn">Shop Now <i class="fas fa-chevron-right"></i></a>
             </header>
+
+            <!-- Home cards 1 -->
+            <section class="home-cards">
+                <div>
+                    <img src="./src/img/card1.png" alt="Card1" />
+                    <h3>New Surface Pro 7</h3>
+                    <p>
+                        See how Katie Sowers, Asst. Coach for 49ers, uses Surface Pro 7 to put her plans into play.
+                    </p>
+                    <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/KjGFHVJ/card2.png" alt="Card2" />
+                    <h3>New Surface Laptop 3</h3>
+                    <p>
+                        Express yourself powerfully with a thin, light, and elegant design, faster performance, and up to 11.5 hours battery life.
+                    </p>
+                    <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/2cnshH6/card3.png" alt="Card3" />
+                    <h3>Save $150 + free controller</h3>
+                    <p>
+                        Buy an Xbox One X console and double your fun with a free select extra controller. Starting at $349.
+                    </p>
+                    <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/G57P0Pb/card4.png" alt="Card4" />
+                    <h3>The new Microsoft Edge</h3>
+                    <p>
+                        Expect more. World class performance, with more privacy, more productivity, and more value.
+                    </p>
+                    <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+                </div>
+            </section>
+
+            <!-- Xbox -->
+            <section class="xbox">
+                <div class="content">
+                    <h2>Xbox Game Pass Ultimate</h2>
+                    <p>Xbox Game Pass Ultimate Xbox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next favorite game.</p>
+                    <a href="#" class="btn"> Join Now <i class="fas fa-chevron-right"></i> </a>
+                </div>
+            </section>
         </div>
     </body>
 </html>
