Add media styles and gamburger-menu

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="./src/css/style.css" />
-        <!-- sass --watch style.scss src/css/style.css -->
     </head>
     <body>
+        <div class="menu-btn">
+            <i class="fas fa-bars fa-2x"></i>
+        </div>
+
         <div class="container">
             <!-- Nav -->
             <nav class="main-nav">
@@ -231,5 +234,11 @@
                 </ul>
             </div>
         </footer>
+
+        <script>
+            document.querySelector('.menu-btn').addEventListener('click', () => {
+                document.querySelector('.main-menu').classList.toggle('show');
+            });
+        </script>
     </body>
 </html>
